# Firefox-profiler-assistant

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: python-app.yml
config/: rag.toml
docs/: pipeline-overview.md
knowledge/analysis/: general-flow.md
knowledge/basic/classes/: MediaDecoderStateMachine.md  example_class.md
knowledge/raw/profiler/: bug1982568_video_suspend.md  example_profiler_playbook.md
src/profiler_assistant/: analysis_tools.py  downloader.py  logging_config.py  main.py  parsing.py
src/profiler_assistant/agent/: agent_gate.py  gemini_client.py  guards.py  prompts.py  react.py  react_agent.py  tool_router.py
tests/: conftest.py  test_analysis_tools.py  test_basic_class_docs_structure.py  test_downloader.py  test_logging_config.py  test_parsing.py  test_rag_ingest.py
tests/agent/: test_agent_gate_base_checks.py  test_agent_gate_branch_logging.py  test_agent_gate_budget.py  test_react_agent.py  test_react_agent_wrapper.py  test_react_end_to_end.py  test_react_guardrails.py  test_tool_router.py  test_tool_router_domain_df_normalization.py  test_tool_router_domain_dispatch.py  test_tool_router_extract_process_query_alias.py  test_tools_base.py
tests/cli/: test_cli_policy_gating.py
tests/helpers/: doc_store_fixture.py  vector_index_fixture.py
tests/llm/: test_env_loading.py
tests/policy/: test_gate.py  test_preamble.py  test_preamble_repo_root.py
tests/rag/: test_backend_dummy.py  test_backend_factory_default_local_mocked.py  test_context_summarize_impl.py  test_get_docs_by_id_impl.py  test_index_manifest.py  test_llm_adapter_mock.py  test_pipeline_min.py  test_profiler_playbooks_structure.py  test_rag_embeddings.py  test_rag_index.py  test_tool_contracts.py  test_types.py
tests/test_agent/: test_gemini_client.py  test_tool_router_contracts.py
(+28 files in other folders)
