[project]
name = "profiler-assistant"
version = "0.1.0"
dependencies = [
    "orjson",
    "pandas",
    "requests",
    "google-generativeai",
    "python-dotenv",
    "numpy>=1.24.0",
    "tomli>=2.0.1",
]

[project.scripts]
profiler-assistant = "profiler_assistant.cli.run:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
faiss = [
    "faiss-cpu>=1.7.4",
]

# This is the corrected section. It automatically finds all packages
# inside the 'src' directory, which is the standard practice.
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]